# CSVProfiler

./: .gitignore  README.md  pyproject.toml
demos/: cli-demo.tape
scripts/: record_cli_demo.sh
src/csv_profiler/: cli.py  mdwriter.py  profiler.py  render.py  webgui.py
