[project]
name = "csv-profiler"
version = "0.1.0"
description = "A tool to profile CSV files and generate reports."
license="MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.1.0",
    "typer>=0.20.0",
]

[project.scripts]
csv-profiler = "csv_profiler.cli:app"
